# autogc_validation

./: .gitignore  =3.1  README.md  environment.yml  outline  pyproject.toml
autogc_validation/: Untitled.ipynb  environment.yml  pyproject.toml
autogc_validation/database/: VOCdb.py  config.py  lcs.xlsx
autogc_validation/database/database/: connection.py
autogc_validation/database/database/schema/: create_table.py  schemas.py
autogc_validation/database/models/: __init__.py  base.py
autogc_validation/database/repositories/: __init__.py  sites.py
autogc_validation/database/utils/: __init__.py  logging_config.py  unit_conversion.py
autogc_validation/domain/: __init__.py
autogc_validation/scripts/: run_file_pipeline.py  run_qc_pipeline.py
data/: autogc.sql
database/: VOCdb.py  __init__.py
notebooks/: gc_database_management.ipynb  sqlite_testing.ipynb  start_month.ipynb
notebooks/.ipynb_checkpoints/: sqlite_testing-checkpoint.ipynb
pipeline/: __init__.py  file_ops_pipeline.py  qc_pipeline.py  runner.py  state.py  state_models.py
pipeline/steps/: __init__.py
pipeline/steps/file_ops/: generate_monthly_folder.py  unzip_repository.py
pipeline/steps/qc/: __init__.py
pipeline/utils/: __init__.py  assert_local_drive.py
src/autogc_validation/: __init__.py  config.py  conversions.py  dataset.py
src/autogc_validation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autogc_validation/core/: orchestrator.py  step.py
src/autogc_validation/database/: config.py
src/autogc_validation/database/airvision/: __init__.py  station_temp.py
src/autogc_validation/database/conn/: __init__.py  connection.py
src/autogc_validation/database/connection/: manager.py
src/autogc_validation/database/database/: __init__.py
src/autogc_validation/database/enums/: __init__.py  aqs_code.py  (+9 more)
src/autogc_validation/domain/: chromatogram.py
src/autogc_validation/io/: __init__.py  cdf.py  samples.py
src/autogc_validation/plots/: __init__.py  ambient.py  qc.py  recovery.py  room_temp.py  rt.py  summary.py
src/autogc_validation/qc/: __init__.py  blanks.py  mdvr.py  precision.py  recovery.py  room_temp.py  rt_outliers.py  screening.py  utils.py
src/autogc_validation/reports/: __init__.py  monthly_report.py  qc_table.py  qualifiers.py  reprocess_plan.py
src/autogc_validation/utils/: __init__.py  logging_config.py
src/autogc_validation/workspace/: __init__.py  files.py  folders.py  parsing.py
templates/mdvr/: EQ_MDVR_template.xlsx
tests/: __init__.py  conftest.py  outline  test_blanks.py  test_conversions.py  test_database.py  test_dataset.py  test_enums.py  test_folders.py  test_mdvr.py  test_models.py  test_qc_utils.py  test_recovery.py  test_samples.py  test_screening.py
tests/test_domain/: __init__.py
tests/test_file_ops/: __init__.py
(+36 files in other folders)
