[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogc-validation"
version = "0.1.0"
description = "VOC data validation pipeline for AutoGC ambient air monitoring"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "name", email = "exhf@domain.com"}]

# Core dependencies - what your project needs to run
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",          # Testing
    "jupyter>=1.0",         # Notebooks
]

# ----------------------------
# Editable install configuration
# ----------------------------
[tool.setuptools.packages.find]
where = ["src"]

# ----------------------------
# pytest configuration
# ----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
